--- a/mvc/views/admin/lista-usuarios.html
+++ b/mvc/views/admin/lista-usuarios.html
@@ -1,18 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Usuarios</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/admin-lista-usuarios.css">
 </head>
-<body>
-  <!-- Contenido de tu página -->
-  
 
-  <!-- JavaScript de Bootstrap 5 -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+<body>
+
+  <div>
+    <div class="container">
+      <h1 class="titulo">Lista de usuarios</h1>
+      <div class="row text-center row-titulo">
+        <div class="col"></div>
+        <div class="col">
+          <h5>Usuarios</h5>
+        </div>
+        <div class="col">
+          <h5>Nivel</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="list-group">
+          <button class="list-group-item list-group-item-action" data-bs-toggle="modal"
+            data-bs-target="#exampleModal">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <img src="https://telegra.ph/file/59dcbd0e11bed21143c47.png" class="rounded-circle" width="40"
+                  alt="Avatar" loading="lazy" />
+              </li>
+              <li class="list-inline-item">Correo@dominio.com</li>
+              <li class="list-inline-item">Administrador</li>
+            </ul>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Mas información</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="row text-center">
+              <div class="col-lg-6">
+                <div class="card testimonial-card">
+                  <div class="card-up" style="background-color: #73b32e;"></div>
+                  <div class="avatar mx-auto bg-white">
+                    <img src="https://telegra.ph/file/59dcbd0e11bed21143c47.png" class="rounded-circle img-fluid" />
+                  </div>
+                  <div class="card-body">
+                    <h4 class="mb-4">Usuario ######</h4>
+                    <hr />
+                    <p class="dark-grey-text mt-4">
+                      <b>Nivel: </b> #####
+                    </p>
+                    <p class="dark-grey-text mt-4">
+                      <b>N° de Control: </b> #####
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 mt-4 mt-lg-0">
+                <div class="card text-bg-secondary">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Registro de Actividades</h5>
+                  </div>
+                  <div class="scroll-container">
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item style-list">Actividad ##</li>
+                      <li class="list-group-item style-list">Actividad ##</li>
+                      <li class="list-group-item style-list">Actividad ##</li>
+                      <li class="list-group-item style-list">Actividad ##</li>
+                      <li class="list-group-item style-list">Actividad ##</li>
+                      <li class="list-group-item style-list">Actividad ##</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+
+
+    <!-- JavaScript de Bootstrap 5 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
