--- a/mvc/views/admin/lista_usuarios.html
+++ b/mvc/views/admin/lista_usuarios.html
@@ -14,93 +14,128 @@
 
 <body>
 
-  <div>
-    <div class="container">
-      <h1 class="titulo">Lista de usuarios</h1>
-      <div class="row text-center row-titulo">
-        <div class="col"></div>
-        <div class="col">
-          <h5>Usuarios</h5>
-        </div>
-        <div class="col">
-          <h5>Nivel</h5>
-        </div>
+  <div class="main-container d-flex">
+    <div class="sidebar" id="side_nav">
+      <div class="header-box justify-content-between px-2 pt-3 pb-4 d-flex">
+        <img class="logo-web" src="/static/img/logo.png" />
+        <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
-      <div class="row">
-        <div class="list-group">
-          <button class="list-group-item list-group-item-action" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <img src="https://telegra.ph/file/59dcbd0e11bed21143c47.png" class="rounded-circle" width="40"
-                  alt="Avatar" loading="lazy" />
-              </li>
-              <li class="list-inline-item">Correo@dominio.com</li>
-              <li class="list-inline-item">Administrador</li>
-            </ul>
-          </button>
-        </div>
-      </div>
+      <ul class="list-unstyled px-2">
+        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
+        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
+        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+      </ul>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Mas información</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="content">
+      <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <div class="container-fluid">
+          <div class="d-flex justify-content-between d-md-none d-block">
+            <button class="btn px-1 py-0 open-btn me-2"><i class="bi bi-list"></i></button>
           </div>
-          <div class="modal-body">
-            <div class="row text-center">
-              <div class="col-lg-6">
-                <div class="card testimonial-card">
-                  <div class="card-up" style="background-color: #73b32e;"></div>
-                  <div class="avatar mx-auto bg-white">
-                    <img src="https://telegra.ph/file/59dcbd0e11bed21143c47.png" class="rounded-circle img-fluid" />
+          <div>
+            <img class="logo-mob" src="/static/img/logo.png" />
+          </div>
+        </div>
+      </nav>
+      <div class="dashboard-content px-3 pt-4">
+        <!-- Aqui va el contenido -->
+        <div class="container">
+          <h1 class="titulo">Lista de usuarios</h1>
+          <div class="row text-center row-titulo">
+            <div class="col"></div>
+            <div class="col">
+              <h5>Usuarios</h5>
+            </div>
+            <div class="col">
+              <h5>Nivel</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="list-group">
+              <button class="list-group-item list-group-item-action" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                <ul class="list-inline">
+                  <li class="list-inline-item">
+                    <img src="https://telegra.ph/file/59dcbd0e11bed21143c47.png" class="rounded-circle" width="40"
+                      alt="Avatar" loading="lazy" />
+                  </li>
+                  <li class="list-inline-item">Correo@dominio.com</li>
+                  <li class="list-inline-item">Administrador</li>
+                </ul>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Mas información</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="row text-center">
+                  <div class="col-lg-6">
+                    <div class="card testimonial-card">
+                      <div class="card-up" style="background-color: #73b32e;"></div>
+                      <div class="avatar mx-auto bg-white">
+                        <img src="https://telegra.ph/file/59dcbd0e11bed21143c47.png" class="rounded-circle img-fluid" />
+                      </div>
+                      <div class="card-body">
+                        <h4 class="mb-4">Usuario ######</h4>
+                        <hr />
+                        <p class="dark-grey-text mt-4">
+                          <b>Nivel: </b> #####
+                        </p>
+                        <p class="dark-grey-text mt-4">
+                          <b>N° de Control: </b> #####
+                        </p>
+                      </div>
+                    </div>
                   </div>
-                  <div class="card-body">
-                    <h4 class="mb-4">Usuario ######</h4>
-                    <hr />
-                    <p class="dark-grey-text mt-4">
-                      <b>Nivel: </b> #####
-                    </p>
-                    <p class="dark-grey-text mt-4">
-                      <b>N° de Control: </b> #####
-                    </p>
+                  <div class="col-lg-6 mt-4 mt-lg-0">
+                    <div class="card text-bg-secondary">
+                      <div class="card-body">
+                        <h5 class="card-title text-center">Registro de Actividades</h5>
+                      </div>
+                      <div class="scroll-container">
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item style-list">Actividad ##</li>
+                          <li class="list-group-item style-list">Actividad ##</li>
+                          <li class="list-group-item style-list">Actividad ##</li>
+                          <li class="list-group-item style-list">Actividad ##</li>
+                          <li class="list-group-item style-list">Actividad ##</li>
+                          <li class="list-group-item style-list">Actividad ##</li>
+                        </ul>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6 mt-4 mt-lg-0">
-                <div class="card text-bg-secondary">
-                  <div class="card-body">
-                    <h5 class="card-title text-center">Registro de Actividades</h5>
-                  </div>
-                  <div class="scroll-container">
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item style-list">Actividad ##</li>
-                      <li class="list-group-item style-list">Actividad ##</li>
-                      <li class="list-group-item style-list">Actividad ##</li>
-                      <li class="list-group-item style-list">Actividad ##</li>
-                      <li class="list-group-item style-list">Actividad ##</li>
-                      <li class="list-group-item style-list">Actividad ##</li>
-                    </ul>
-                  </div>
-                </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
               </div>
             </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-          
         </div>
       </div>
     </div>
+  </div>
 
-
-    <!-- JavaScript de Bootstrap 5 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <!-- JavaScript de Bootstrap 5 -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <script>
+    $('.open-btn').click(function () {
+      $('.sidebar').addClass('active');
+    });
+    $('.close-btn').click(function () {
+      $('.sidebar').removeClass('active');
+    });
+  </script>
 </body>
 
 </html>
