--- a/static/css/admin-lista-usuarios.css
+++ b/static/css/admin-lista-usuarios.css
@@ -30,6 +30,7 @@
   
   .list-group-item {
     margin-bottom: 10px;
+    height: 60px;
   }
   
   .list-inline {
@@ -40,6 +41,7 @@
     list-style: none;
     font-size: 15px;
     flex-wrap: nowrap;
+    margin: 0;
   }
   
   .list-inline-item {
