--- a/mvc/views/admin/generar_pozo.html
+++ b/mvc/views/admin/generar_pozo.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Generar Nuevo Pozo</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/generar-pozos.css">
 </head>
+
 <body>
   <div class="main-container d-flex">
     <div class="sidebar" id="side_nav">
       <div class="header-box justify-content-between px-2 pt-3 pb-4 d-flex">
-        <img class="logo-web" src="/static/img/logo.png"/>
+        <img class="logo-web" src="/static/img/logo.png" />
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
@@ -36,6 +40,38 @@
       </nav>
       <div class="dashboard-content px-3 pt-4">
         <!-- Aqui va el contenido -->
+        <div class="formulario">
+          <h1 class="titulo">Generar nuevo pozo</h1>
+          <form @submit="guardarDatos">
+            <div class="input-container">
+              <label for="nombre">Nombre del pozo:</label>
+              <input type="text" id="nombre" v-model="nombrePozo" required>
+            </div>
+
+            <div class="input-container">
+              <label for="ubicacion">Ubicación del pozo:</label>
+              <input type="text" id="ubicacion" v-model="ubicacionPozo" required>
+            </div>
+
+            <div class="input-container">
+              <label for="concesion">Concesión (CONAGUA) del pozo:</label>
+              <input type="text" id="concesion" v-model="concesionPozo" required>
+            </div>
+
+            <div class="input-container">
+              <label for="convenio">Convenio (CFE) del pozo:</label>
+              <input type="text" id="convenio" v-model="convenioPozo" required>
+            </div>
+
+            <div class="input-container grande">
+              <label for="informacion">Información extra del pozo:</label>
+              <textarea id="informacion" v-model="informacionExtraPozo"></textarea>
+            </div>
+
+            <button type="submit" class="boton-guardar">Guardar</button>
+          </form>
+        </div>
+
       </div>
     </div>
   </div>
@@ -51,4 +87,5 @@
     });
   </script>
 </body>
+
 </html>
