--- a/mvc/views/admin/control_pozo.html
+++ b/mvc/views/admin/control_pozo.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/control-remoto.css">
 </head>
 <body>
   <div class="main-container d-flex">
@@ -16,8 +17,8 @@
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
+        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
         <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
         <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
         <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
@@ -36,6 +37,42 @@
       </nav>
       <div class="dashboard-content px-3 pt-4">
         <!-- Aqui va el contenido -->
+        <div class="d-flex flex-column" id="general">
+          <div class="d-flex justify-content-center">
+            <h1 class="titulo">Control Remoto</h1>
+          </div>
+          <div class="d-flex justify-content-center">
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Selecciona un pozo</option>
+              <option value="1">Pozo 1</option>
+              <option value="2">Pozo 2</option>
+              <option value="3">Pozo 3</option>
+            </select>
+          </div>
+          <div class="d-flex justify-content-around" id="contenedor">
+            <div class="d-flex flex-column" id="componentes">
+              <div class="d-flex justify-content-center">
+                <p class="fs-5 fw-bold">Horario Programado</p>
+              </div>
+              <div class="d-flex justify-content-center">
+                <p class="fs-5">08:00 - 20:00</p>
+              </div>
+              <div class="d-flex justify-content-center">
+                <p class="text-body-secondary"><a href="#" class="text-reset">Cambiar horario</a>
+                </p>
+              </div>
+            </div>
+            <div class="d-flex flex-column" id="componentes">
+              <div class="d-flex justify-content-center">
+                <p class="fs-5 fw-bold">Apagar</p>
+              </div>
+              <div class="container">
+                <input type="checkbox" id="check">
+                <label for="check" class="button"></label>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
