--- a/mvc/views/public/login.html
+++ b/mvc/views/public/login.html
@@ -6,9 +6,28 @@
   <title>Inicio de Sesión</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
-  <!-- Contenido de tu página -->
+  <div class="grid-container">
+    <div class="custom-grid">
+        <div class="custom-col">
+            <h1>Inicia Sesión</h1>
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="email">
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+            </form>
+        </div>
+    </div>
+</div>
   
 
   <!-- JavaScript de Bootstrap 5 -->
