--- a/mvc/views/informatica/agregar_usuario.html
+++ b/mvc/views/informatica/agregar_usuario.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/agregar_usuario.css">
 </head>
 
@@ -45,7 +46,7 @@
           <form class="row g-3 justify-content-evenly">
             <div class="row g-3 justify-content-evenly">
               <div class="col-md-4">
-                <label for="inputEmail4" class="form-label">Correo Electronico</label>
+                <label for="inputEmail4" class="form-label">Correo Electrónico</label>
                 <input type="email" placeholder="correo@email.com" class="form-control" id="inputEmail4">
               </div>
               <div class="col-md-4">
