--- a/mvc/views/admin/cambiar_horario.html
+++ b/mvc/views/admin/cambiar_horario.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cambiar Horario</title>
+  <title>Control del Pozo</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="/static/css/cambiar_horario.css">
+  
 </head>
+
 <body>
   <div class="main-container d-flex">
     <div class="sidebar" id="side_nav">
+      
       <div class="header-box justify-content-between px-2 pt-3 pb-4 d-flex">
-        <img class="logo-web" src="/logo.png"/>
+        <img class="logo-web" src="/static/img/logo.png" />
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
+        
       </div>
       <ul class="list-unstyled px-2">
         <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
@@ -29,14 +37,101 @@
           <div class="d-flex justify-content-between d-md-none d-block">
             <button class="btn px-1 py-0 open-btn me-2"><i class="bi bi-list"></i></button>
           </div>
-          <div>
-            <img class="logo-mob" src="/logo.png" />
-          </div>
         </div>
       </nav>
-      <div class="dashboard-content px-3 pt-4">
-        <!-- Aqui va el contenido -->
+      <div class="align-center">
+        <h1 class="titulo">Lista de usuarios</h1>
       </div>
+      <div class="card">
+        <div class="container">
+          
+          <div class="row align-items-start">
+            <div class="col" class="horario">
+              <h5>Días de la semana</h5>
+              <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+              <label class="form-check-label" for="firstCheckbox">Lunes</label>
+              <br>
+              <br>
+              <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+              <label class="form-check-label" for="secondCheckbox">Martes</label>
+              <br><br>
+              <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+              <label class="form-check-label" for="thirdCheckbox">Miércoles</label>
+              <br><br>
+              <input class="form-check-input me-1" type="checkbox" value="" id="fourthCheckbox">
+              <label class="form-check-label" for="fourthCheckbox">Jueves</label>
+              <br><br>
+              <input class="form-check-input me-1" type="checkbox" value="" id="fifthCheckbox">
+              <label class="form-check-label" for="fifthCheckbox">Viernes</label>
+              <br><br>
+              <input class="form-check-input me-1" type="checkbox" value="" id="sixthCheckbox">
+              <label class="form-check-label" for="sixthCheckbox">Sábado</label>
+              <br><br>
+              <input class="form-check-input me-1" type="checkbox" value="" id="seventhCheckbox">
+              <label class="form-check-label" for="seventhCheckbox">Domingo</label>
+            </div>
+            <div class="col" class="horario">
+              <h5>Horario</h5>
+              <label for="time1">De</label>
+              <input type="time" id="time1" placeholder="000" class="custom-input">
+              <br>
+              <br>
+              <label for="time2">De</label>
+              <input type="time" id="time2" placeholder="000" class="custom-input">
+              <br>
+              <br>
+              <label for="time3">De</label>
+              <input type="time" id="time3" placeholder="000" class="custom-input">
+              <br>
+              <br>
+              <label for="time4">De</label>
+              <input type="time" id="time4" placeholder="000" class="custom-input">
+              <br>
+              <br>
+              <label for="time5">De</label>
+              <input type="time" id="time5" placeholder="000" class="custom-input">
+              <br>
+              <br>
+              <label for="time6">De</label>
+              <input type="time" id="time6" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time7">De</label>
+              <input type="time" id="time7" placeholder="000" class="custom-input">
+            </div>
+            <div class="col" class="horario">
+              <h5>Horario</h5>
+              <label for="time8">Hasta</label>
+              <input type="time" id="time8" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time9">Hasta</label>
+              <input type="time" id="time9" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time10">Hasta</label>
+              <input type="time" id="time10" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time11">Hasta</label>
+              <input type="time" id="time11" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time12">Hasta</label>
+              <input type="time" id="time12" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time13">Hasta</label>
+              <input type="time" id="time13" placeholder="000" class="custom-input">
+              <br><br>
+              <label for="time14">Hasta</label>
+              <input type="time" id="time14" placeholder="000" class="custom-input">
+            </div>
+            
+            <div class="col-12 text-center">
+              <br>
+              <br>
+              <button type="submit" class="btn btn-primary">Guardar horas</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+
     </div>
   </div>
   <!-- Scripts Menu -->
@@ -51,4 +146,5 @@
     });
   </script>
 </body>
+
 </html>
