--- a/mvc/views/admin/lista_pozos.html
+++ b/mvc/views/admin/lista_pozos.html
@@ -68,7 +68,7 @@
                     <p class="card-text"><b>Ubicación: </b> 7.558742369° 5.1598842125°</p>
                     <p class="card-text"><b>Informacion extra: </b> Lorem ipsum dolor sit amet consectetur adipisicing
                       elit.</p>
-                    <button class="btn btn-dark" onclick="flipCard()">Regrear</button>
+                    <button class="btn btn-dark" onclick="flipCard()">Regresar</button>
                   </div>
                 </div>
               </div>
