--- a/mvc/views/admin/control_pozo.html
+++ b/mvc/views/admin/control_pozo.html
@@ -18,11 +18,11 @@
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class=""><a href="/admin/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class="active"><a href="/admin/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
+        <li class=""><a href="/admin/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
+        <li class=""><a href="/admin/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
@@ -32,7 +32,7 @@
             <button class="btn px-1 py-0 open-btn me-2"><i class="bi bi-list"></i></button>
           </div>
           <div>
-            <img class="logo-mob" src="/static/img/logo.png" />
+            <img class="logo-mob" src="/static/img/logo.png"/>
           </div>
         </div>
       </nav>
@@ -59,7 +59,7 @@
                 <p class="fs-5">08:00 - 20:00</p>
               </div>
               <div class="d-flex justify-content-center">
-                <p class="text-body-secondary"><a href="#" class="text-reset">Cambiar horario</a>
+                <p class="text-body-secondary"><a href="/admin/cambiar-horario" class="text-reset">Cambiar horario</a>
                 </p>
               </div>
             </div>
