--- a/mvc/views/informatica/agregar_usuario.html
+++ b/mvc/views/informatica/agregar_usuario.html
@@ -23,7 +23,7 @@
       <ul class="list-unstyled px-2">
         <li class="active"><a href="/informatica/agregar-usuario" class="text-decoration-none px-3 py-2 d-block">Agregar Usuario</a></li>
         <li class=""><a href="/informatica/modificar-usuario"" class="text-decoration-none px-3 py-2 d-block">Modificar Usuario</a></li>
-        <li class="salir"><a href="# class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
