--- a/mvc/views/operador/control_pozo.html
+++ b/mvc/views/operador/control_pozo.html
@@ -18,11 +18,11 @@
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
       </div>
       <ul class="list-unstyled px-2">
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class=""><a href="/operador/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class="active"><a href="/operador/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
+        <li class=""><a href="/operador/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
+        <li class=""><a href="/operador/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
@@ -59,7 +59,7 @@
                 <p class="fs-5">08:00 - 20:00</p>
               </div>
               <div class="d-flex justify-content-center">
-                <p class="text-body-secondary"><a href="#" class="text-reset">Cambiar horario</a>
+                <p class="text-body-secondary"><a href="/operador/cambiar-horario" class="text-reset">Cambiar horario</a>
                 </p>
               </div>
             </div>
