--- a/mvc/views/admin/lista_pozos.html
+++ b/mvc/views/admin/lista_pozos.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/91477fde98/UntitledProject/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/lista_pozos.css">
 </head>
@@ -52,7 +52,7 @@
                     <p class="card-text"><b>Estado: </b> Encendido</p>
                     <p class="card-text"><b>Electricidad: </b>Si</p>
                     <div class="d-grid gap-2">
-                      <button class="btn btn-success" type="button"><span class="icon-switch"></span></button>
+                      <button class="btn btn-success" type="button"><i class="bi bi-power"></i></button>
                       <button class="btn btn-info" onclick="flipCard()">Mas información
                     </div>
                   </div>
