--- a/mvc/views/informatica/modificar_usuario.html
+++ b/mvc/views/informatica/modificar_usuario.html
@@ -26,7 +26,7 @@ $def with (users, boton_valor = None)
             Usuario</a></li>
         <li class="active"><a href="/informatica/modificar-usuario" class=" text-decoration-none px-3 py-2
             d-block">Modificar Usuario</a></li>
-        <li class="salir"><a href="#" class=" text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class="salir"><a href="/logout" class=" text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
