--- a/mvc/views/operador/lista_pozos.html
+++ b/mvc/views/operador/lista_pozos.html
@@ -6,14 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Pozos</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-<<<<<<< HEAD
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-=======
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/97774ac59e/UntitledProject/style.css">
->>>>>>> 06e91c54030dc32fdbe749d141941f2d77dfb3a6
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/lista_pozos.css">
 </head>
@@ -57,7 +52,7 @@
                     <p class="card-text"><b>Estado: </b> Encendido</p>
                     <p class="card-text"><b>Electricidad: </b>Si</p>
                     <div class="d-grid gap-2">
-                      <button class="btn btn-success" type="button"><span class="icon-switch"></span></button>
+                      <button class="btn btn-success" type="button"><i class="bi bi-power"></i></button>
                       <button class="btn btn-info" onclick="flipCard()">Mas información
                     </div>
                   </div>
