--- a/mvc/views/informatica/agregar_usuario.html
+++ b/mvc/views/informatica/agregar_usuario.html
@@ -41,7 +41,7 @@
         <!-- Aqui va el contenido -->
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="d-flex">
-            <h1 class="text-body-primary">Agregar Usuario</h1>
+            <h1 class="titulo">Agregar Usuario</h1>
           </div>
           <form class="row g-3 justify-content-evenly" method="post">
             <div class="row g-3 justify-content-evenly">
