--- a/mvc/views/informatica/modificar_usuario.html
+++ b/mvc/views/informatica/modificar_usuario.html
@@ -44,7 +44,7 @@ $def with (users, boton_valor = None)
         <!-- Aqui va el contenido -->
         <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="d-flex">
-            <h1 class="text-body-primary">Modificar Usuario</h1>
+            <h1 class="titulo">Modificar Usuario</h1>
           </div>
           <form class="row g-3 justify-content-evenly" method="post">
             <div class="row g-3 justify-content-evenly">
