--- a/static/css/control-remoto.css
+++ b/static/css/control-remoto.css
@@ -13,74 +13,40 @@
   }
   #contenedor {
     background: #E8E8E8;
-    width: 60%;
+    width: 700px;
     height: 300px;
     border-radius: 10px;
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    transform: translate(-50%, -50%);
+    margin-top: 50px;
   }
 
   #componentes {
     margin-top: 5%;
+
   }
 
   #componentes div {
     margin-bottom: 20px;
   }
 
-  #check{
-    width: 30px;
-    height: 30px;
-  }
-
-  .button {
-    width: 90px;
+  #flexSwitchCheckDefault{
+    width: 100px;
     height: 50px;
     background-color: #fff;
-    border-radius: 200px;
-    cursor: pointer;
-    position: relative;
-    transition: 0.2s;
+    border-color: transparent;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ff4141'/%3e%3c/svg%3e");
   }
-
-  .button::before {
-    position: absolute;
-    content: "";
-    width: 40px;
-    height: 40px;
-    background-color: #ff4141;
-    border-radius: 200px;
-    margin: 5px;
-    transition: 0.2s;
-  }
-
-  input:checked+.button {
-    background-color: #fff;
-  }
-
-  input:checked+.button::before {
-    transform: translateX(40px);
-    background-color: #57ff41;
-  }
-
-  input {
-    display: none;
+  #flexSwitchCheckDefault:checked{
+    width: 100px;
+    height: 50px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2357ff41'/%3e%3c/svg%3e");
   }
 
   @media (max-width: 767px) {
     #contenedor {
-    width: 80%;
-    height: 50%;
+    width: 250px;
+    height: 450px;
     border-radius: 10px;
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     flex-direction: column;
-  }
-  #componentes .container {
-    margin-left: 32%;
+    margin-bottom: 50px;
   }
 }
