--- a/mvc/views/operador/lista_usuarios.html
+++ b/mvc/views/operador/lista_usuarios.html
@@ -76,15 +76,8 @@ $def with(users)
 
   <!-- JavaScript de Bootstrap 5 -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../../../static/js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
-    });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
-  </script>
 </body>
 
 </html>
