--- a/mvc/views/admin/control_pozo.html
+++ b/mvc/views/admin/control_pozo.html
@@ -66,7 +66,7 @@ $def with(pozos)
                   <p class="fs-5" id="horario"> hh:mm:ss - hh:mm:ss </p>
                 </div>
                 <div class="d-flex justify-content-center">
-                  <p class="text-body-secondary"><a href="/admin/cambiar-horario" class="text-reset">Cambiar horario</a>
+                  <p class="text-body-secondary"><a href="" class="text-reset" id="link_cambiar">Cambiar horario</a>
                   </p>
                 </div>
               </div>
@@ -78,6 +78,7 @@ $def with(pozos)
                   <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                 </div>
                 <input type="hidden" id="estado" name="estado" value="">
+                <input type="hidden" id="idpozo" name="idpozo" value="">
               </div>
             </div>
           </div>
@@ -90,7 +91,7 @@ $def with(pozos)
     <script src="../../../static/js/scripts.js"></script>
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-      import { getDatabase, ref, update } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+      import { getDatabase, ref, update, child, get, push } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
 
       // Your web app's Firebase configuration
       const firebaseConfig = {
@@ -106,16 +107,82 @@ $def with(pozos)
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
       const db = getDatabase(app);
+      let pozo = "";
 
-      function updateData(){
-        const selectElement = document.getElementById('selectPozo');
-        const estadoElement = document.getElementById('estado');
+      const selectElement = document.getElementById('selectPozo');
+      const estadoElement = document.getElementById('estado');
+      const getLocalidCookie = () => document.cookie.split('; ').find(cookie => cookie.startsWith('localid=')).split('=')[1] || null;
+
+
+      function updateData() {
         update(ref(db, 'data/pozos/' + selectElement.value + '/estado_pozo'), {
           estado: parseInt(estadoElement.value)
         });
       }
+
+      function setLogEncendido() {
+        var localid = toString(getLocalidCookie());
+        const formattedDateTime = new Date().toISOString().slice(0, 19).replace('T', ' ');
+        push(ref(db, 'data/usuarios/' + getLocalidCookie() + '/logs'), {
+          actividad: "Encendido del pozo: " + pozo,
+          fecha: formattedDateTime,
+        });
+      }
+
+      function setLogApagado() {
+        var localid = toString(getLocalidCookie());
+        const formattedDateTime = new Date().toISOString().slice(0, 19).replace('T', ' ');
+        push(ref(db, 'data/usuarios/' + getLocalidCookie() + '/logs'), {
+          actividad: "Apagado del pozo: " + pozo,
+          fecha: formattedDateTime,
+        });
+      }
+
+      function setLog() {
+        if (estadoElement.value == "1") {
+          setLogEncendido();
+        } else {
+          setLogApagado();
+        }
+      }
+
+      function readData() {
+        document.getElementById('link_cambiar').href = "/admin/cambiar-horario/" + selectElement.value;
+        const dbref = ref(db)
+        get(child(dbref, 'data/pozos/' + selectElement.value + '/estado_pozo/estado')).then((snapshot) => {
+          if (snapshot.exists()) {
+            estadoElement.value = snapshot.val();
+            if (estadoElement.value == "1") {
+              document.getElementById('flexSwitchCheckDefault').checked = true;
+            } else {
+              document.getElementById('flexSwitchCheckDefault').checked = false;
+            }
+          } else {
+            console.log("No data available");
+          }
+        }).catch((error) => {
+          console.error(error);
+        });
+        get(child(dbref, 'data/pozos/' + selectElement.value + '/nombre')).then((snapshot) => {
+          if (snapshot.exists()) {
+            pozo = snapshot.val();
+            console.log(pozo);
+          } else {
+            console.log("No data available");
+          }
+        }).catch((error) => {
+          console.error(error);
+        });
+      }
+
+
       document.getElementById('flexSwitchCheckDefault').addEventListener('change', function () {
         updateData();
+        setLog();
+      });
+
+      document.getElementById('selectPozo').addEventListener('change', function () {
+        readData();
       });
     </script>
 </body>
