--- a/mvc/views/admin/lista_pozos.html
+++ b/mvc/views/admin/lista_pozos.html
@@ -1,3 +1,4 @@
+$def with(pozos)
 <!DOCTYPE html>
 <html lang="es">
 
@@ -6,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Pozos</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/style.css">
@@ -42,59 +44,106 @@
 
       <div class="dashboard-content px-3 pt-4">
         <h1 class="titulo">Lista de Pozos</h1>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                    <img src="/static/img/gotas.png" class="gota">
-                    <h5 class="card-title">Pozo de Valle Verde</h5>
-                    <p class="card-text"><b>Estado: </b> Encendido</p>
-                    <p class="card-text"><b>Electricidad: </b>Si</p>
-                    <div class="d-grid gap-2">
-                      <button class="btn btn-success" type="button"><i class="bi bi-power"></i></button>
-                      <button class="btn btn-info" onclick="flipCard()">Mas información
+        <div class="container text-center">
+          <div class="row row-cols-md-3">
+            $for pozo in pozos:
+              <div class="col">
+                <input type="hidden" name="idpozo" value="$pozo.key()">
+                <input type="hidden" id="estado" value="$pozo.val().get('estado_pozo').get('estado')">
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                      <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                          <img src="/static/img/gotas.png" class="gota">
+                          <h5 class="card-title">$pozo.val().get('nombre')</h5>
+                          $if pozo.val().get('estado_pozo').get('estado') == 0:
+                            <p class="card-text" style="color: red;"><b>Estado: </b>Apagado</p>
+                          $else:
+                            <p class="card-text" style="color: green;"><b>Estado: </b> Encendido</p>
+                          $if pozo.val().get('estado_pozo').get('electricidad') == 0:
+                            <p class="card-text" style="color: red;"><b>Electricidad: </b>Apagado</p>
+                          $else:
+                            <p class="card-text" style="color: green;"><b>Electricidad: </b>Si</p>
+                          <div class="d-grid gap-2">
+                            $if pozo.val().get('estado_pozo').get('estado') == 0:
+                              <button class="btn btn-success" type="button" id="btn_control" value="$pozo.key()"><i
+                                class="bi bi-power"></i></button>
+                            $else:
+                              <button class="btn btn-danger" type="button" id="btn_control" value="$pozo.key()"><i
+                                class="bi bi-power"></i></button>
+                            <button class="btn btn-info" id="btn_flip">Mas información</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="flip-card-back">
+                      <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                          <img src="/static/img/gotas.png" class="gota">
+                          <h5 class="card-title">$pozo.val().get('nombre')</h5>
+                          <p class="card-text"><b>Convenio: </b> $pozo.val().get('convenio')</p>
+                          <p class="card-text"><b>Concesión: </b> $pozo.val().get('concesion')</p>
+                          <p class="card-text"><b>Ubicación: </b> $pozo.val().get('ubicacion')</p>
+                          <p class="card-text"><b>Informacion extra: </b> $pozo.val().get('informacion')</p>
+                          <button class="btn btn-dark" id="btn_flip2">Regresar</button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="flip-card-back">
-                <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                    <img src="/static/img/gotas.png" class="gota">
-                    <h5 class="card-title">Pozo de Valle Verde</h5>
-                    <p class="card-text"><b>Convenio: </b> 0123456789</p>
-                    <p class="card-text"><b>Concesión: </b> 0987654321</p>
-                    <p class="card-text"><b>Ubicación: </b> 7.558742369° 5.1598842125°</p>
-                    <p class="card-text"><b>Informacion extra: </b> Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.</p>
-                    <button class="btn btn-dark" onclick="flipCard()">Regresar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
-          
+        </div>
       </div>
     </div>
   </div>
   <!-- Scripts Menu -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
-    });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
-  </script>
-  <script>
-    function flipCard() {
-      var flipCard = document.querySelector('.flip-card');
-      flipCard.classList.toggle('flipped');
-    }
-  </script>
+  <script src="../../../static/js/scripts.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getDatabase, ref, update, child, get, push } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
 
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDSNosUdU1keJfy1LiUWLRHt28xMvFolXo",
+      authDomain: "sienapa-734e9.firebaseapp.com",
+      databaseURL: "https://sienapa-734e9-default-rtdb.firebaseio.com",
+      projectId: "sienapa-734e9",
+      storageBucket: "sienapa-734e9.appspot.com",
+      messagingSenderId: "538109518725",
+      appId: "1:538109518725:web:cc5781087804a219ed5aec"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const dbref = ref(db);
+    let estado = document.getElementById('estado').value;
+
+    function setData(id) {
+      if (estado == 0) {
+        update(ref(db, 'data/pozos/' + id + '/estado_pozo'), {
+          estado: 1
+        });
+        estado = 1;
+        console.log("Encendido");
+      } else {
+        update(ref(db, 'data/pozos/' + id + '/estado_pozo'), {
+          estado: 0
+        });
+        estado = 0;
+        console.log("Apagado");
+      }
+    }
+
+    document.getElementById('btn_control').addEventListener('click', function () {
+      const id = this.value;
+      setData(id);
+    });
+  </script>
 </body>
+
 </html>
