--- a/mvc/views/informatica/modificar_usuario.html
+++ b/mvc/views/informatica/modificar_usuario.html
@@ -1,4 +1,4 @@
-$def with (users, boton_valor = None)
+$def with (users)
 <!DOCTYPE html>
 <html lang="es">
 
@@ -36,7 +36,7 @@ $def with (users, boton_valor = None)
             <button class="btn px-1 py-0 open-btn me-2"><i class="bi bi-list"></i></button>
           </div>
           <div>
-            <img class="logo-mob" src="/static/img/logo.png" />
+            <img class="logo-mob" src="/static/img/logo.png"/>
           </div>
         </div>
       </nav>
@@ -53,7 +53,8 @@ $def with (users, boton_valor = None)
                 <select id="selectUsuario" class="form-select">
                   <option selected>Selecciona un usuario</option>
                   $for user in users
-                    <option value="$user.val().get('nivel')" id="$user.val().get('no_control')" class="$user.key()">$user.val().get('correo')</option>
+                  <option value="$user.val().get('nivel')" id="$user.val().get('no_control')" class="$user.key()">
+                    $user.val().get('correo')</option>
                 </select>
                 <input type="hidden" id="select-valor" name="id" value="">
               </div>
@@ -66,7 +67,8 @@ $def with (users, boton_valor = None)
               <div class="col-md-4 align-items-">
                 <label for="inputAddress" class="form-label">Nivel</label><br>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-evenly">
-                  <button type="submit" class="btn admin"data-bs-toggle="button" value="administrador">Administrador</button>
+                  <button type="submit" class="btn admin" data-bs-toggle="button"
+                    value="administrador">Administrador</button>
                   <button type="submit" class="btn operador" data-bs-toggle="button" value="operador">Operador</button>
                   <input type="hidden" id="boton-valor" name="nivel" value="">
                 </div>
@@ -78,7 +80,8 @@ $def with (users, boton_valor = None)
               <button type="submit" class="btn-submit" id="modificar">Modificar Usuario</button>
             </div>
             <div class="row g-5 justify-content-end">
-              <button type="submit" class="btn-submit" id="eliminar">Eliminar Usuario</button>
+              <button type="submit" class="btn-submit" id="desactivar">Eliminar Usuario</button>
+              <button type="submit" class="btn-submit" id="activar" style="display: none;">Activar Usuario</button>
             </div>
           </form>
         </div>
@@ -89,6 +92,49 @@ $def with (users, boton_valor = None)
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../../../static/js/scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getDatabase, ref, update, child, get, push } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDSNosUdU1keJfy1LiUWLRHt28xMvFolXo",
+      authDomain: "sienapa-734e9.firebaseapp.com",
+      databaseURL: "https://sienapa-734e9-default-rtdb.firebaseio.com",
+      projectId: "sienapa-734e9",
+      storageBucket: "sienapa-734e9.appspot.com",
+      messagingSenderId: "538109518725",
+      appId: "1:538109518725:web:cc5781087804a219ed5aec"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const dbref = ref(db)
+
+    const estadoElement = document.getElementById('select-valor');
+
+    function getEstado() {
+      get(child(dbref, 'data/usuarios/' + estadoElement.value + '/status')).then((snapshot) => {
+        if (snapshot.exists()) {
+          if (snapshot.val() == "activo") {
+            document.getElementById('desactivar').style.display = "block";
+            document.getElementById('activar').style.display = "none";
+          } else {
+            document.getElementById('desactivar').style.display = "none";
+            document.getElementById('activar').style.display = "block";
+          }
+        } else {
+          console.log("No data available");
+        }
+      }).catch((error) => {
+        console.error(error);
+      });
+    }
+    document.getElementById('selectUsuario').addEventListener('change', function () {
+      getEstado();
+    });
+  </script>
 </body>
 
 </html>
