--- a/mvc/views/admin/cambiar_horario.html
+++ b/mvc/views/admin/cambiar_horario.html
@@ -1,3 +1,4 @@
+$def with (id_pozo, horarios)
 <!DOCTYPE html>
 <html lang="es">
 
@@ -6,34 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control del Pozo</title>
   <link rel="icon" href="/static/img/favicon.png" type="image/x-icon">
-<<<<<<< HEAD
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-=======
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
->>>>>>> 06e91c54030dc32fdbe749d141941f2d77dfb3a6
-  <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/cambiar_horario.css">
-  
 </head>
 
 <body>
   <div class="main-container d-flex">
     <div class="sidebar" id="side_nav">
-      
       <div class="header-box justify-content-between px-2 pt-3 pb-4 d-flex">
         <img class="logo-web" src="/static/img/logo.png" />
         <button class="btn d-md-none d-block close-btn me-2"><i class="bi bi-x-lg"></i></button>
-        
       </div>
       <ul class="list-unstyled px-2">
-        <li class="active"><a href="#" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
-        <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
-        <li class="salir"><a href="#" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
+        <li class="active"><a href="/admin/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
+        <li class=""><a href="/admin/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a>
+        </li>
+        <li class=""><a href="/admin/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
+        <li class=""><a href="/admin/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
     <div class="content">
@@ -45,110 +39,128 @@
         </div>
       </nav>
       <div class="align-center">
-        <h1 class="titulo">Lista de usuarios</h1>
+        <h1 class="titulo">Cambiar horario</h1>
       </div>
+      <input type="hidden" id="id_pozo" value="$id_pozo">
       <div class="card">
         <div class="container">
-          
           <div class="row align-items-start">
-            <div class="col" class="horario">
-              <h5>Días de la semana</h5>
-              <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-              <label class="form-check-label" for="firstCheckbox">Lunes</label>
-              <br>
-              <br>
-              <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-              <label class="form-check-label" for="secondCheckbox">Martes</label>
-              <br><br>
-              <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-              <label class="form-check-label" for="thirdCheckbox">Miércoles</label>
-              <br><br>
-              <input class="form-check-input me-1" type="checkbox" value="" id="fourthCheckbox">
-              <label class="form-check-label" for="fourthCheckbox">Jueves</label>
-              <br><br>
-              <input class="form-check-input me-1" type="checkbox" value="" id="fifthCheckbox">
-              <label class="form-check-label" for="fifthCheckbox">Viernes</label>
-              <br><br>
-              <input class="form-check-input me-1" type="checkbox" value="" id="sixthCheckbox">
-              <label class="form-check-label" for="sixthCheckbox">Sábado</label>
-              <br><br>
-              <input class="form-check-input me-1" type="checkbox" value="" id="seventhCheckbox">
-              <label class="form-check-label" for="seventhCheckbox">Domingo</label>
+            <div class="col horario">
+              <h5 class="mb-4">Días de la semana</h5>
+              <div class="col horario">
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia1">
+                <label class="form-check-label" for="firstCheckbox">Lunes</label>
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia2">
+                <label class="form-check-label" for="secondCheckbox">Martes</label>
+
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia3">
+                <label class="form-check-label" for="thirdCheckbox">Miércoles</label>
+
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia4">
+                <label class="form-check-label" for="fourthCheckbox">Jueves</label>
+
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia5">
+                <label class="form-check-label" for="fifthCheckbox">Viernes</label>
+
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia6">
+                <label class="form-check-label" for="sixthCheckbox">Sábado</label>
+
+                <input class="form-check-input me-1" type="checkbox" value="" id="dia7">
+                <label class="form-check-label" for="seventhCheckbox">Domingo</label>
+              </div>
             </div>
-            <div class="col" class="horario">
+            <div class="col horario">
               <h5>Horario</h5>
-              <label for="time1">De</label>
-              <input type="time" id="time1" placeholder="000" class="custom-input">
-              <br>
-              <br>
-              <label for="time2">De</label>
-              <input type="time" id="time2" placeholder="000" class="custom-input">
-              <br>
-              <br>
-              <label for="time3">De</label>
-              <input type="time" id="time3" placeholder="000" class="custom-input">
-              <br>
-              <br>
-              <label for="time4">De</label>
-              <input type="time" id="time4" placeholder="000" class="custom-input">
-              <br>
-              <br>
-              <label for="time5">De</label>
-              <input type="time" id="time5" placeholder="000" class="custom-input">
-              <br>
-              <br>
-              <label for="time6">De</label>
-              <input type="time" id="time6" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time7">De</label>
-              <input type="time" id="time7" placeholder="000" class="custom-input">
-            </div>
-            <div class="col" class="horario">
-              <h5>Horario</h5>
-              <label for="time8">Hasta</label>
-              <input type="time" id="time8" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time9">Hasta</label>
-              <input type="time" id="time9" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time10">Hasta</label>
-              <input type="time" id="time10" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time11">Hasta</label>
-              <input type="time" id="time11" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time12">Hasta</label>
-              <input type="time" id="time12" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time13">Hasta</label>
-              <input type="time" id="time13" placeholder="000" class="custom-input">
-              <br><br>
-              <label for="time14">Hasta</label>
-              <input type="time" id="time14" placeholder="000" class="custom-input">
-            </div>
-            
-            <div class="col-12 text-center">
-              <br>
-              <br>
-              <button type="submit" class="btn btn-primary">Guardar horas</button>
-            </div>
+              <form method="post">
+                <div class="col horario">
+                  <div class="d-flex justify-content-center align-items-center">
+                    <label class="me-3" for="time1">De</label>
+                    <input type="time" name="time1" step="1800" class="custom-input"
+                      value="$horarios.val().get('h_encendido')">
+                    <label class="ms-3" for="time2">Hasta</label>
+                    <input type="time" name="time2" step="1800" class="custom-input"
+                      value="$horarios.val().get('h_apagado')">
+                    <input type="hidden" name="id_pozo" value="$id_pozo">
+                  </div>
+                </div>
+                <div class="col-12 text-center mt-4">
+                  <button type="submit" class="btn btn-primary" id="guardarHorasBtn">Guardar horas</button>
+                </div>
+              </form>
           </div>
         </div>
       </div>
-      
-
     </div>
   </div>
-  <!-- Scripts Menu -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
+  <script src="../../../static/js/scripts.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getDatabase, ref, update, child, get, push, } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDSNosUdU1keJfy1LiUWLRHt28xMvFolXo",
+      authDomain: "sienapa-734e9.firebaseapp.com",
+      databaseURL: "https://sienapa-734e9-default-rtdb.firebaseio.com",
+      projectId: "sienapa-734e9",
+      storageBucket: "sienapa-734e9.appspot.com",
+      messagingSenderId: "538109518725",
+      appId: "1:538109518725:web:cc5781087804a219ed5aec"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const id_pozo = document.getElementById('id_pozo').value;
+  
+    function getData(dia) {
+      const dbref = ref(db);
+      get(child(dbref, 'data/pozos/' + id_pozo + '/horario/' + dia)).then((snapshot) => {
+        if (snapshot.exists()) {
+          console.log(snapshot.val());
+          if (snapshot.val() == "1") {
+            document.getElementById(dia).checked = true;
+          }
+          else {
+            document.getElementById(dia).checked = false;
+          }
+        } else {
+          console.log("No data available");
+        }
+      }).catch((error) => {
+        console.error(error);
+      });
+    }
+    function setData(dia, value) {
+      update(ref(db, 'data/pozos/' + id_pozo + '/horario/'), {
+        [dia]: value
+      });
+    }
+    document.addEventListener('DOMContentLoaded', function () {
+      for (let i = 1; i <= 7; i++) {
+        getData("dia" + i);
+      }
     });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
+    function actualizarCheckbox(dia) {
+      const checkbox = document.getElementById(dia);
+      checkbox.addEventListener('click', function () {
+        if (checkbox.checked) {
+          setData(dia, 1);
+        } else {
+          setData(dia, 0);
+        }
+      });
+    }
+    actualizarCheckbox('dia1');
+    actualizarCheckbox('dia2');
+    actualizarCheckbox('dia3');
+    actualizarCheckbox('dia4');
+    actualizarCheckbox('dia5');
+    actualizarCheckbox('dia6');
+    actualizarCheckbox('dia7');
+
   </script>
 </body>
 
