--- a/mvc/views/admin/lista_pozos.html
+++ b/mvc/views/admin/lista_pozos.html
@@ -94,6 +94,7 @@ $def with(pozos)
                 </div>
               </div>
           </div>
+          <a class="btn btn-primary generar" href="/admin/generar-pozo" role="button">Generar nuevo Pozo</a>
         </div>
       </div>
     </div>
